librgw: compile and implement more of rgw_file
The rgw_file body wasn't being built, so had some impossible
constructs.  More had been added by the commit which renamed
struct nfs_handle to struct rgw_file_handle.

Several key RGWLib methods hadn't been implemented (in progress).

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1171,6 +1171,7 @@ if(${WITH_RADOSGW})
     rgw/rgw_process.cc
     rgw/rgw_frontend.cc
     rgw/rgw_rest_lib.cc
+    rgw/rgw_file.cc
     rgw/rgw_object_expirer_core.cc
     rgw/rgw_website.cc
     rgw/rgw_xml_enc.cc
