librgw: rgw shared library
Refactor rgw_a and radosgw_srcs, and add librgw_srcs, permitting
librgw to contain a smaller subset of objects, and in particular,
not link with fcgi or civitweb.

Fix aliasing of librgw_t rgw in test_rgw_file.  Also remove global_init
there, since it can't do the right thing.  Instead, assign g_ceph_context
(ref'd) in librgw_create, if not present.

(The current rgw codebase has many dependencies on g_ceph_context to
trivially remove--it would be easier to remove it entirely, and that seems
likely to happen eventually.)

We link librgw as SHARED, with PRIVATE dependencies.  The test_librgw_file
link test demonstrates that librgw.a can be linked with no Ceph library
dependencies except librados (and its dependencies, platform dependencies,
etc).

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1131,82 +1131,73 @@ endif(${WITH_KVS})
 
 if(${WITH_RADOSGW})
   set(rgw_a_srcs
-    rgw/librgw.cc
     rgw/rgw_acl.cc
     rgw/rgw_acl_s3.cc
     rgw/rgw_acl_swift.cc
-    rgw/rgw_client_io.cc
-    rgw/rgw_fcgi.cc
-    rgw/rgw_xml.cc
-    rgw/rgw_usage.cc
-    rgw/rgw_json_enc.cc
-    rgw/rgw_user.cc
-    rgw/rgw_bucket.cc
-    rgw/rgw_tools.cc
-    rgw/rgw_rados.cc
-    rgw/rgw_http_client.cc
-    rgw/rgw_rest_client.cc
-    rgw/rgw_rest_conn.cc
-    rgw/rgw_op.cc
+    rgw/rgw_auth_s3.cc
     rgw/rgw_basic_types.cc
-    rgw/rgw_common.cc
+    rgw/rgw_bucket.cc
     rgw/rgw_cache.cc
-    rgw/rgw_formats.cc
-    rgw/rgw_log.cc
-    rgw/rgw_multi.cc
-    rgw/rgw_policy_s3.cc
-    rgw/rgw_gc.cc
-    rgw/rgw_multi_del.cc
-    rgw/rgw_env.cc
+    rgw/rgw_client_io.cc
+    rgw/rgw_common.cc
     rgw/rgw_cors.cc
     rgw/rgw_cors_s3.cc
-    rgw/rgw_auth_s3.cc
-    rgw/rgw_metadata.cc
-    rgw/rgw_replica_log.cc
-    rgw/rgw_keystone.cc
-    rgw/rgw_quota.cc
     rgw/rgw_dencoder.cc
-    rgw/rgw_dencoder.cc
-    rgw/rgw_request.cc
-    rgw/rgw_process.cc
+    rgw/rgw_env.cc
+    rgw/rgw_fcgi.cc
+    rgw/rgw_formats.cc
     rgw/rgw_frontend.cc
-    rgw/rgw_rest_lib.cc
-    rgw/rgw_file.cc
+    rgw/rgw_gc.cc
+    rgw/rgw_http_client.cc
+    rgw/rgw_json_enc.cc
+    rgw/rgw_keystone.cc
+    rgw/rgw_loadgen.cc
+    rgw/rgw_log.cc
+    rgw/rgw_metadata.cc
+    rgw/rgw_multi.cc
+    rgw/rgw_multi_del.cc
     rgw/rgw_object_expirer_core.cc
+    rgw/rgw_op.cc
+    rgw/rgw_policy_s3.cc
+    rgw/rgw_process.cc
+    rgw/rgw_quota.cc
+    rgw/rgw_rados.cc
+    rgw/rgw_replica_log.cc
+    rgw/rgw_request.cc
+    rgw/rgw_resolve.cc
+    rgw/rgw_rest_bucket.cc
+    rgw/rgw_rest.cc
+    rgw/rgw_rest_client.cc
+    rgw/rgw_rest_config.cc
+    rgw/rgw_rest_conn.cc
+    rgw/rgw_rest_lib.cc
+    rgw/rgw_rest_log.cc
+    rgw/rgw_rest_metadata.cc
+    rgw/rgw_rest_opstate.cc
+    rgw/rgw_rest_replica_log.cc
+    rgw/rgw_rest_s3.cc
+    rgw/rgw_rest_swift.cc
+    rgw/rgw_rest_usage.cc
+    rgw/rgw_rest_user.cc
+    rgw/rgw_swift_auth.cc
+    rgw/rgw_swift.cc
+    rgw/rgw_tools.cc
+    rgw/rgw_usage.cc
+    rgw/rgw_user.cc
     rgw/rgw_website.cc
+    rgw/rgw_xml.cc
     rgw/rgw_xml_enc.cc
     )
 
   add_library(rgw_a STATIC ${rgw_a_srcs})
-  set_target_properties(rgw_a PROPERTIES OUTPUT_NAME rgw)
-  install(TARGETS rgw_a DESTINATION lib)
-
-  install(FILES
-    include/rados/librgw.h
-    include/rados/rgw_file.h
-  DESTINATION include/rados)
 
   include_directories("${CMAKE_SOURCE_DIR}/src/civetweb/include")
 
   set(radosgw_srcs
-    rgw/rgw_resolve.cc
-    rgw/rgw_rest.cc
-    rgw/rgw_rest_swift.cc
-    rgw/rgw_rest_s3.cc
-    rgw/rgw_rest_usage.cc
-    rgw/rgw_rest_user.cc
-    rgw/rgw_rest_bucket.cc
-    rgw/rgw_rest_metadata.cc
-    rgw/rgw_replica_log.cc
-    rgw/rgw_rest_log.cc
-    rgw/rgw_rest_opstate.cc
-    rgw/rgw_rest_replica_log.cc
-    rgw/rgw_rest_config.cc
-    rgw/rgw_http_client.cc
-    rgw/rgw_swift.cc
-    rgw/rgw_swift_auth.cc
-    rgw/rgw_loadgen.cc
+    rgw/rgw_fcgi_process.cc
+    rgw/rgw_loadgen_process.cc
     rgw/rgw_civetweb.cc
+    rgw/rgw_civetweb_frontend.cc
     rgw/rgw_civetweb_log.cc
     civetweb/src/civetweb.c
     rgw/rgw_main.cc)
@@ -1217,6 +1208,34 @@ if(${WITH_RADOSGW})
 
   set(radosgw_object_expirer_srcs
     rgw/rgw_object_expirer.cc)
+
+  set(librgw_srcs
+    rgw/librgw.cc
+    rgw/rgw_file.cc
+    )
+
+  add_library(rgw SHARED ${librgw_srcs} $<TARGET_OBJECTS:heap_profiler_objs>)
+  target_link_libraries(rgw PRIVATE
+    rgw_a
+    librados
+    cls_rgw_client
+    cls_lock_client
+    cls_refcount_client
+    cls_log_client
+    cls_statelog_client
+    cls_timeindex_client
+    cls_version_client
+    cls_replica_log_client
+    cls_user_client
+    curl expat global
+    resolv
+    ${TCMALLOC_LIBS})
+
+  install(TARGETS rgw DESTINATION lib)
+  install(FILES
+    include/rados/librgw.h
+    include/rados/rgw_file.h
+  DESTINATION include/rados)
 
   add_executable(radosgw ${radosgw_srcs} $<TARGET_OBJECTS:heap_profiler_objs>)
   target_link_libraries(radosgw rgw_a librados
