librgw: s/rgw_rest_lib.{h,cc}/rgw_os_lib.{h,cc}
There is no longer an explicit (e.g., inherited) dependency on REST
implementations.

The remaining coupling (via RGWLibEnv, and struct req_state), can
be factored out later.

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1158,6 +1158,7 @@ if(${WITH_RADOSGW})
     rgw/rgw_multi_del.cc
     rgw/rgw_object_expirer_core.cc
     rgw/rgw_op.cc
+    rgw/rgw_os_lib.cc
     rgw/rgw_policy_s3.cc
     rgw/rgw_process.cc
     rgw/rgw_quota.cc
@@ -1170,7 +1171,6 @@ if(${WITH_RADOSGW})
     rgw/rgw_rest_client.cc
     rgw/rgw_rest_config.cc
     rgw/rgw_rest_conn.cc
-    rgw/rgw_rest_lib.cc
     rgw/rgw_rest_log.cc
     rgw/rgw_rest_metadata.cc
     rgw/rgw_rest_opstate.cc
