xxHash: add as submodule
Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>

--- a/.gitmodules
+++ b/.gitmodules
@@ -26,3 +26,6 @@
 [submodule "src/spdk"]
 	path = src/spdk
 	url = https://github.com/ceph/spdk.git
+[submodule "src/xxHash"]
+	path = src/xxHash
+	url = https://github.com/Cyan4973/xxHash.git
