librgw: initial librgw_file_nfsns.cc test
Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>

--- a/src/test/CMakeLists.txt
+++ b/src/test/CMakeLists.txt
@@ -2431,6 +2431,22 @@ target_link_libraries(test_librgw_file_gp
   ${CMAKE_DL_LIBS}
   )
 
+# librgw_file_nfsns (nfs namespace tests)
+add_executable(test_librgw_file_nfsns
+  librgw_file_nfsns.cc
+  $<TARGET_OBJECTS:heap_profiler_objs>
+  )
+set_target_properties(test_librgw_file_nfsns PROPERTIES COMPILE_FLAGS
+  ${UNITTEST_CXX_FLAGS})
+target_link_libraries(test_librgw_file_nfsns
+  rgw
+  librados
+  ${UNITTEST_LIBS}
+  ${EXTRALIBS}
+  ${ALLOC_LIBS}
+  ${CMAKE_DL_LIBS}
+  )
+
 if(${HAVE_LIBFUSE})
   add_executable(test_cfuse_cache_invalidate
     test_cfuse_cache_invalidate.cc
