--- a/debian/control
+++ b/debian/control
@@ -487,9 +487,51 @@ Description: Ceph distributed file system client library (development files)
  This package contains development files needed for building applications that
  link against libcephfs.
 
+
+
+
+
+Package: librgw2
+Architecture: linux-any
+Section: libs
+Depends: librados2 (= ${binary:Version}), ${misc:Depends}, ${shlibs:Depends}
+Description: RADOS Gateway client library
+RADOS is a distributed object store used by the Ceph distributed
+ storage system.  This package provides a REST gateway to the
+ object store that aims to implement a superset of Amazon's S3
+ service.
+ .
+ This package contains the library interface and headers only.
+
+Package: librgw2-dbg
+Architecture: linux-any
+Section: debug
+Priority: extra
+Depends: librgw2 (= ${binary:Version}), ${misc:Depends}
+Description: debugging symbols for librbd1
+RADOS is a distributed object store used by the Ceph distributed
+ storage system.  This package provides a REST gateway to the
+ object store that aims to implement a superset of Amazon's S3
+ service.
+ .
+ This package contains debugging symbols for librgw2.
+
+Package: librgw-dev
+Architecture: linux-any
+Section: libdevel
+Depends: librados-dev, librgw2 (= ${binary:Version}), ${misc:Depends}
+Description: RADOS block device client library (development files)
+RADOS is a distributed object store used by the Ceph distributed
+ storage system.  This package provides a REST gateway to the
+ object store that aims to implement a superset of Amazon's S3
+ service.
+ .
+ This package contains development files needed for building applications
+ that link against librgw2.
+
 Package: radosgw
 Architecture: linux-any
-Depends: ceph-common (= ${binary:Version}), mime-support,
+Depends: librgw2, ceph-common (= ${binary:Version}), mime-support,
          ${misc:Depends}, ${shlibs:Depends}
 Description: REST gateway for RADOS distributed object store
  RADOS is a distributed object store used by the Ceph distributed
