rgw: add a pure c++, header-only base64 encode/decode
interface is based on strings, but takes boost::string_ref

when encoding, column-wrap is controlled by the <wrap_width>
template argument, which defaults to int-max

Signed-off-by: Matt Benjamin <mbenjamin@redhat.com>

--- a/src/rgw/Makefile.am
+++ b/src/rgw/Makefile.am
@@ -151,6 +151,7 @@ noinst_HEADERS += \
 	rgw/rgw_acl.h \
 	rgw/rgw_acl_s3.h \
 	rgw/rgw_acl_swift.h \
+	rgw/rgw_b64.h \
 	rgw/rgw_client_io.h \
 	rgw/rgw_fcgi.h \
 	rgw/rgw_xml.h \
